--- a/style.css
+++ b/style.css
@@ -91,4 +91,5 @@ div.footer {
     background-image: linear-gradient(to right, #ff6387, #fac767);
     height: 50px;
     margin-top: 50px;
+    margin-bottom: 0%;
 }
