--- a/style.css
+++ b/style.css
@@ -87,9 +87,9 @@ div.list {
     height: 200px;
 }
 
-div.footer {
+footer {
     background-image: linear-gradient(to right, #ff6387, #fac767);
     height: 50px;
-    margin-top: 50px;
-    margin-bottom: 0%;
+    margin-top: 70px;
+    margin-bottom: 0px;
 }
