--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ div.list {
 }
 
 footer {
-    background-image: linear-gradient(to right, #ff6387, #fac767);
+    background-image: linear-gradient(to right, #ff5f84, #fac767);
     height: 50px;
     margin-top: 70px;
     margin-bottom: 0px;
